[gd_scene load_steps=4 format=2]

[ext_resource path="res://ressources/Guitheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/SceneTransitionRect.tscn" type="PackedScene" id=3]

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 827.0
margin_top = 406.0
margin_right = 1092.0
margin_bottom = 674.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 49.0
text = "Menu"
align = 1

[node name="Continue_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 265.0
margin_bottom = 122.0
text = "Continue"

[node name="Help_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 265.0
margin_bottom = 195.0
text = "Help"

[node name="MainMenu_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 265.0
margin_bottom = 268.0
text = "Main Menu"

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
show_behind_parent = true
margin_left = 760.0
margin_top = 390.0
margin_right = 1160.0
margin_bottom = 690.0
rect_min_size = Vector2( 400, 300 )
mouse_filter = 2
color = Color( 0.258824, 0.462745, 0.541176, 1 )

[node name="SceneTransitionRect" parent="." instance=ExtResource( 3 )]
